--- a/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
+++ b/KTMBaner/KTMBaner/Base.lproj/SignUp.storyboard
@@ -60,7 +60,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="42" id="mJE-sg-KYi"/>
                                                 </constraints>
-                                                <state key="normal" title="Select Date">
+                                                <state key="normal" title="Select Birthdate">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
