--- a/KTMBaner/KTMBaner/Base.lproj/Main.storyboard
+++ b/KTMBaner/KTMBaner/Base.lproj/Main.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Dax-Dg-Lgt">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -4945,51 +4946,76 @@ BANER, Pune 411045</string>
                                     <outlet property="delegate" destination="K0U-kp-uIl" id="0vr-dp-Jsr"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RbF-ic-lsd">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4xG-Gs-aMN" firstAttribute="top" secondItem="K6n-2M-w3V" secondAttribute="bottom" constant="2" id="3nI-DN-iZH"/>
+                            <constraint firstItem="4xG-Gs-aMN" firstAttribute="top" secondItem="K6n-2M-w3V" secondAttribute="bottom" constant="2" id="3nI-DN-iZH">
+                                <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                            </constraint>
                             <constraint firstItem="K6n-2M-w3V" firstAttribute="leading" secondItem="AQQ-bF-Q4f" secondAttribute="leadingMargin" constant="-16" id="JcR-3z-yht"/>
                             <constraint firstItem="K6n-2M-w3V" firstAttribute="top" secondItem="fm6-RL-zEy" secondAttribute="bottom" id="K68-cb-4dw"/>
                             <constraint firstAttribute="trailingMargin" secondItem="K6n-2M-w3V" secondAttribute="trailing" constant="-16" id="MfS-GJ-gtc"/>
                             <constraint firstItem="Dkp-8y-YMt" firstAttribute="top" secondItem="4xG-Gs-aMN" secondAttribute="bottom" id="N3D-K1-4eA"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4xG-Gs-aMN" secondAttribute="trailing" constant="-16" id="QLU-5x-3i9"/>
+                            <constraint firstItem="RbF-ic-lsd" firstAttribute="top" secondItem="K6n-2M-w3V" secondAttribute="bottom" constant="-4" id="bMP-dH-B1r"/>
+                            <constraint firstItem="4xG-Gs-aMN" firstAttribute="top" secondItem="RbF-ic-lsd" secondAttribute="bottom" id="c4X-4Y-vay"/>
                             <constraint firstItem="4xG-Gs-aMN" firstAttribute="leading" secondItem="AQQ-bF-Q4f" secondAttribute="leadingMargin" constant="-16" id="fFB-GR-x9s"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="RbF-ic-lsd" secondAttribute="trailing" constant="-16" id="lZw-MA-cI1"/>
+                            <constraint firstItem="RbF-ic-lsd" firstAttribute="leading" secondItem="AQQ-bF-Q4f" secondAttribute="leadingMargin" constant="-16" id="teA-fY-J6l"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="K6n-2M-w3V"/>
                                 <exclude reference="4xG-Gs-aMN"/>
+                                <exclude reference="RbF-ic-lsd"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="N3D-K1-4eA"/>
-                                <exclude reference="3nI-DN-iZH"/>
-                                <exclude reference="QLU-5x-3i9"/>
-                                <exclude reference="fFB-GR-x9s"/>
                                 <exclude reference="JcR-3z-yht"/>
                                 <exclude reference="K68-cb-4dw"/>
                                 <exclude reference="MfS-GJ-gtc"/>
+                                <exclude reference="bMP-dH-B1r"/>
+                                <exclude reference="lZw-MA-cI1"/>
+                                <exclude reference="teA-fY-J6l"/>
+                                <exclude reference="3nI-DN-iZH"/>
+                                <exclude reference="QLU-5x-3i9"/>
+                                <exclude reference="c4X-4Y-vay"/>
+                                <exclude reference="fFB-GR-x9s"/>
+                                <exclude reference="N3D-K1-4eA"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="subviews">
                                 <include reference="K6n-2M-w3V"/>
                                 <include reference="4xG-Gs-aMN"/>
+                                <include reference="RbF-ic-lsd"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="N3D-K1-4eA"/>
-                                <include reference="3nI-DN-iZH"/>
-                                <include reference="QLU-5x-3i9"/>
-                                <include reference="fFB-GR-x9s"/>
                                 <include reference="JcR-3z-yht"/>
                                 <include reference="K68-cb-4dw"/>
                                 <include reference="MfS-GJ-gtc"/>
+                                <include reference="bMP-dH-B1r"/>
+                                <include reference="lZw-MA-cI1"/>
+                                <include reference="teA-fY-J6l"/>
+                                <include reference="3nI-DN-iZH"/>
+                                <include reference="QLU-5x-3i9"/>
+                                <include reference="c4X-4Y-vay"/>
+                                <include reference="fFB-GR-x9s"/>
+                                <include reference="N3D-K1-4eA"/>
                             </mask>
                         </variation>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="costTabelView" destination="4xG-Gs-aMN" id="GZI-qe-UrB"/>
+                        <outlet property="searchBar" destination="RbF-ic-lsd" id="BS0-Lu-G9i"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gKY-KT-w9s" userLabel="First Responder" sceneMemberID="firstResponder"/>
